--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
 </head>
 <body>
-
+2
 <!-- Starting an immersive WebXR session requires user interaction.
     We start this one with a simple button. -->
 <button onclick="activateXR()">Start Hello WebXR</button>
@@ -34,9 +34,13 @@
     ];
 
 // Create the cube and add it to the demo scene.
-    const cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
-    cube.position.set(1, 1, 1);
-    scene.add(cube);
+
+
+    const scene = new THREE.Scene();
+
+    const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+    directionalLight.position.set(10, 15, 10);
+    scene.add(directionalLight);
 
     // Set up the WebGLRenderer, which handles rendering to the session's base layer.
     const renderer = new THREE.WebGLRenderer({
@@ -54,7 +58,7 @@
     camera.matrixAutoUpdate = false;
 
     // Initialize a WebXR session using "immersive-ar".
-    const session = await navigator.xr.requestSession("immersive-ar");
+    const session = await navigator.xr.requestSession("immersive-ar", {requiredFeatures: ['hit-test']});
     session.updateRenderState({
       baseLayer: new XRWebGLLayer(session, gl)
     });
