--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
 </head>
 <body>
-2
+
 <!-- Starting an immersive WebXR session requires user interaction.
     We start this one with a simple button. -->
 <button onclick="activateXR()">Start Hello WebXR</button>
@@ -20,21 +20,6 @@
     const canvas = document.createElement("canvas");
     document.body.appendChild(canvas);
     const gl = canvas.getContext("webgl", {xrCompatible: true});
-
-    const scene = new THREE.Scene();
-
-// The cube will have a different color on each side.
-    const materials = [
-      new THREE.MeshBasicMaterial({color: 0xff0000}),
-      new THREE.MeshBasicMaterial({color: 0x0000ff}),
-      new THREE.MeshBasicMaterial({color: 0x00ff00}),
-      new THREE.MeshBasicMaterial({color: 0xff00ff}),
-      new THREE.MeshBasicMaterial({color: 0x00ffff}),
-      new THREE.MeshBasicMaterial({color: 0xffff00})
-    ];
-
-// Create the cube and add it to the demo scene.
-
 
     const scene = new THREE.Scene();
 
@@ -58,7 +43,7 @@
     camera.matrixAutoUpdate = false;
 
     // Initialize a WebXR session using "immersive-ar".
-    const session = await navigator.xr.requestSession("immersive-ar", {requiredFeatures: ['hit-test']});
+    const session = await navigator.xr.requestSession("immersive-ar");
     session.updateRenderState({
       baseLayer: new XRWebGLLayer(session, gl)
     });
